<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainLinearLayout" android:layout_width="fill_parent"
	android:layout_height="match_parent" android:orientation="vertical">

	<LinearLayout
	    android:id="@+id/topBar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:background="@drawable/top_bar"
	    android:baselineAligned="false"
	    android:orientation="vertical" >

		<View android:background="@drawable/divider_grey"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_" />
		<View android:background="@drawable/divider_white"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_" />

		<LinearLayout
		    android:id="@+id/MV_topBarHorizontal"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/top_bar"
		    android:orientation="horizontal" >

			<RelativeLayout
			    android:id="@+id/MV_displayChoiceButton"
			    style="@style/GradiantButton"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:background="@drawable/gradiant_button"
			    android:minWidth="80dp"
			    android:paddingLeft="7dp"
			    android:paddingRight="7dp" >

				<TextView
				    android:id="@+id/MV_displayChoiceLabel"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_centerHorizontal="false"
				    android:text="@string/MV_displayChoiceLabel"
				    android:textSize="9dip" />

			    <TextView
			        android:id="@+id/MV_displayChoice"
			        style="@style/TransparentButton"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/MV_displayChoiceLabel"
			        android:layout_marginRight="4dp"
			        android:clickable="false"
			        android:text="@string/MV_favorites"
			        android:textSize="12dip" />

			    <ImageView
			        android:id="@+id/displayChoiceDownArrow"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:layout_toRightOf="@id/MV_displayChoice"
			        android:src="@drawable/down_arrow" />

			</RelativeLayout>
			
			<ImageView style="@style/TitleBarSeparatorDark"/>
			<ImageView style="@style/TitleBarSeparatorLight" />

			<TextView
			    android:id="@+id/homepageTitle"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:gravity="center_vertical|center_horizontal"
			    android:height="40dp"
			    android:paddingBottom="5dp"
			    android:paddingTop="5dp"
			    android:shadowColor="#FFFFFFFF"
			    android:shadowDx="0"
			    android:shadowDy="1"
			    android:shadowRadius="0.2"
			    android:text="@string/app_name"
			    android:textSize="18sp" />

			<ImageView style="@style/TitleBarSeparatorDark" />
			<ImageView style="@style/TitleBarSeparatorLight" />

			<RelativeLayout
			    android:id="@+id/MV_sortChoiceButton"
			    style="@style/GradiantButton"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:background="@drawable/gradiant_button"
			    android:minWidth="60dp"
			    android:paddingLeft="7dp"
			    android:paddingRight="7dp" >
			    
			    <TextView
			        android:id="@+id/MV_sortChoiceLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_alignParentTop="true"
			        android:text="@string/MV_sortLabel"
			        android:textSize="9dip" />

			    <TextView
			        android:id="@+id/MV_sortChoice"
			        style="@style/TransparentButton"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/MV_sortChoiceLabel"
			        android:layout_marginRight="3dp"
			        android:clickable="false"
			        android:text="@string/MV_sortMostVisited"
			        android:textSize="12dip" />

			    <ImageView
			        android:id="@+id/sortDownArrow"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:layout_toRightOf="@id/MV_sortChoice"
			        android:src="@drawable/down_arrow" />

			</RelativeLayout>

		</LinearLayout>

		<View android:id="@+id/divider2" android:layout_width="fill_parent"
			android:layout_height="1px" android:background="@drawable/divider_grey" />

		<View android:background="@drawable/divider_black"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_" />
	</LinearLayout>

	<ListView android:layout_weight="1" android:id="@+id/favoriteStopsListView"
		android:layout_width="wrap_content" android:layout_height="match_parent"
		android:layout_gravity="top" />
	<ScrollView android:layout_width="match_parent" android:id="@+id/HP_emptyView"
		android:layout_height="wrap_content" android:layout_weight="1">
		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="match_parent" android:id="@+id/emptyViewRelative"
			android:gravity="top">
			<TextView android:layout_marginTop="14dp"
				android:layout_alignParentTop="true" android:paddingTop="5dp"
				android:id="@+id/welcome_title" android:paddingLeft="10dp"
				android:textColor="@color/Green" android:layout_height="wrap_content"
				android:layout_width="match_parent" android:textStyle="bold"
				android:gravity="center_horizontal" android:maxLines="1"
				android:layout_alignParentLeft="true" android:paddingRight="10dp"
				android:textSize="22sp" android:text="@string/welcomeTitle" />
			<View android:layout_marginTop="10dp" android:layout_height="1px"
				android:id="@+id/divider2_" android:layout_below="@+id/welcome_title"
				android:layout_width="wrap_content" android:background="@drawable/divider_grey"
				android:layout_alignParentLeft="true" />
			<TextView android:layout_marginTop="20dp"
				android:paddingTop="5dp" android:id="@+id/welcome_message"
				android:paddingLeft="18dp" android:layout_height="wrap_content"
				android:layout_below="@+id/welcome_title" android:layout_width="match_parent"
				android:layout_alignParentLeft="true" android:paddingRight="10dp"
				android:textSize="20sp" android:text="@string/welcomeMessage" />
		</RelativeLayout>
	</ScrollView>

	<LinearLayout
	    android:id="@+id/bottomBar"
	    android:layout_width="match_parent"
	    android:layout_height="52dp"
	    android:layout_gravity="bottom"
	    android:background="@drawable/top_bar"
	    android:orientation="horizontal" >

		<EditText
		    android:id="@+id/stopIDTextBox"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_weight="1"
		    android:cursorVisible="true"
		    android:hint="@string/homepageTextTip"
		    android:inputType="number" >

			<requestFocus />
		</EditText>

		<ImageView style="@style/TitleBarSeparatorDark" />
		<ImageView style="@style/TitleBarSeparatorLight" />

		<Button
		    android:id="@+id/goButton"
		    style="@style/GradiantButton"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:minEms="2"
		    android:text="@string/homepageGo" />

	</LinearLayout>
</LinearLayout>