<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/FNP_stop_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="Stop Label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/FNP_direction_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/direction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginBottom="3dp"
        android:background="@drawable/divider_grey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/routesAtThisStop"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="5dp"/>

    <ListView
        android:id="@+id/FNP_routes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" android:layout_marginRight="5dp" android:duplicateParentState="false" android:layout_marginLeft="4dp">
    </ListView>

    <Button
        android:id="@+id/FNP_show_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="3dp"
        android:text="@string/getArrivalInformation" />

</LinearLayout>