<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
    <LinearLayout android:layout_height="wrap_content"
		android:id="@+id/FN_topBar" android:layout_width="match_parent"
		android:baselineAligned="false" android:layout_gravity="center"
		android:orientation="vertical" android:background="@drawable/top_bar">
		<View android:background="@drawable/divider_grey"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_"></View>
		<View android:background="@drawable/divider_white"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_"></View>


		<LinearLayout
		    android:id="@+id/FN_topBarHorizontal"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >




			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:orientation="vertical" >






				<TextView
				    android:id="@+id/FN_Title"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal"
				    android:layout_weight="1"
				    android:paddingBottom="5dp"
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingTop="5dp"
				    android:text="@string/FN_Title"
				    android:textSize="22sp" />

			</LinearLayout>


		    <ImageView style="@style/TitleBarSeparatorDark" />


		    <ImageView style="@style/TitleBarSeparatorLight" />



		    <RelativeLayout
		        android:id="@+id/FN_refreshButton"
		        style="@style/GradiantButton"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:background="@drawable/gradiant_button"
		        android:minWidth="40dp" >



		        <ImageView
		            android:id="@+id/FN_refreshImage"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/ic_menu_refresh" />

		    </RelativeLayout>
		</LinearLayout>

		<View android:background="@drawable/divider_black"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_"></View>
	</LinearLayout>
  
	<com.google.android.maps.MapView
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/FNBMapView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:clickable="true"
	    android:apiKey="@string/gmaps_api_paid" android:layout_weight="1"/>
	
	<View android:layout_width="fill_parent" android:layout_height="1px"
			android:background="@drawable/divider_grey" android:id="@+id/divider2">
	</View>
	<LinearLayout android:layout_width="match_parent"
		android:id="@+id/FNB_BottomBar" android:layout_gravity="bottom"
		android:background="@drawable/top_bar" android:layout_height="52dp">
			<EditText android:layout_width="wrap_content" android:hint="@string/FNB_TextTip"
				android:layout_gravity="bottom" android:cursorVisible="true"
				android:layout_weight="2" android:layout_height="wrap_content" android:layout_marginRight="5dp"
				android:id="@+id/FNB_FilterTextBox" android:inputType="textFilter" android:layout_marginLeft="5dp">
				<requestFocus></requestFocus>
			</EditText>
	</LinearLayout>
</LinearLayout>
