<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent" android:layout_width="match_parent"
	android:id="@+id/showstopLinearLayout" android:orientation="vertical"
	android:fadingEdge="none" android:fadingEdgeLength="0dp">
	<LinearLayout android:id="@+id/showStopTopBar"
		android:layout_gravity="center" android:baselineAligned="false"
		android:layout_height="wrap_content" android:layout_width="match_parent"
		android:orientation="vertical" android:background="@drawable/top_bar">
		<View android:background="@drawable/divider_grey"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_"></View>
		<View android:background="@drawable/divider_white"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_"></View>
		<TextView android:maxLines="1" android:text="TextView"
			android:textSize="20sp" android:singleLine="true"
			android:paddingLeft="10dp" android:id="@+id/SS_StopTitle"
			android:paddingRight="10dp" android:layout_height="wrap_content"
			android:paddingTop="5dp" android:layout_gravity="center"
			android:layout_width="wrap_content" android:paddingBottom="4dp"></TextView>
		<TextView android:maxLines="1" android:text="TextView"
			android:textSize="15sp" android:singleLine="true"
			android:paddingLeft="10dp" android:id="@+id/SS_StopID"
			android:paddingRight="10dp" android:layout_height="wrap_content"
			android:layout_gravity="center" android:layout_width="wrap_content"
			android:paddingBottom="5dp"></TextView>
		<View android:background="@drawable/divider_black"
			android:layout_width="fill_parent" android:layout_height="1px"
			android:id="@+id/divider_"></View>
	</LinearLayout>
	<ListView android:layout_height="match_parent" android:id="@+id/SS_ArrivalsListView"
		android:layout_width="wrap_content" android:layout_weight="1">
	</ListView>

	<ScrollView android:layout_width="match_parent" android:id="@+id/SS_emptyView"
		android:layout_height="wrap_content" android:layout_weight="1">
		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="match_parent" android:id="@+id/SS_emptyViewRelative"
			android:gravity="top">
			<TextView android:layout_marginTop="14dp"
				android:layout_alignParentTop="true" android:paddingTop="5dp"
				android:id="@+id/no_arrivals_title" android:paddingLeft="10dp"
				android:textColor="@color/Red" android:layout_height="wrap_content"
				android:layout_width="match_parent" android:textStyle="bold"
				android:gravity="center_horizontal" android:maxLines="1"
				android:layout_alignParentLeft="true" android:paddingRight="10dp"
				android:textSize="22sp" android:text="@string/noArrivalsTitle"></TextView>
			<View android:layout_marginTop="10dp" android:layout_height="1px"
				android:id="@+id/divider2_" android:layout_below="@+id/no_arrivals_title"
				android:layout_width="wrap_content" android:background="@drawable/divider_grey"
				android:layout_alignParentLeft="true"></View>
			<TextView android:layout_marginTop="20dp"
				android:paddingTop="5dp" android:id="@+id/no_arrivals_message"
				android:paddingLeft="18dp" android:layout_height="wrap_content"
				android:layout_below="@+id/no_arrivals_title" android:layout_width="match_parent"
				android:layout_alignParentLeft="true" android:paddingRight="10dp"
				android:textSize="20sp" android:text="@string/noArrivalsMessage"></TextView>
		</RelativeLayout>
	</ScrollView>

	<View android:layout_width="fill_parent" android:layout_height="1px"
		android:background="@drawable/divider_black" android:id="@+id/SS_BottomDivider"
		android:visibility="gone"></View>

	<LinearLayout android:layout_width="match_parent"
		android:id="@+id/SS_BottomBar" android:layout_gravity="bottom"
		android:background="@drawable/top_bar" android:layout_height="45dp"
		android:visibility="gone">
		<Button android:id="@+id/SS_DetourButton" android:text="@string/DetoursActiveButton"
			style="@style/RedButton" android:layout_gravity="bottom"
			android:layout_height="match_parent" android:layout_width="match_parent">
		</Button>

	</LinearLayout>
</LinearLayout>